update(submodules): Add s2sdk

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "vendor/metamod"]
 	path = vendor/metamod
 	url = https://github.com/alliedmodders/metamod-source
+[submodule "vendor/s2sdk"]
+	path = vendor/s2sdk
+	url = https://github.com/swiftly-solution/s2sdk
+	branch = cs2
