--- a/managed/src/TestPlugin/TestPlugin.csproj
+++ b/managed/src/TestPlugin/TestPlugin.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" ExcludeAssets="runtime" PrivateAssets="all" />
     <PackageReference Include="NetEscapades.Configuration.Yaml" Version="3.1.0" ExcludeAssets="runtime" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" ExcludeAssets="runtime" PrivateAssets="all" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.15.4" />
     <ProjectReference Include="..\..\managed.csproj" ExcludeAssets="runtime" PrivateAssets="all" />
   </ItemGroup>
 
