--- a/plugin_files/gamedata/cs2/core/signatures.jsonc
+++ b/plugin_files/gamedata/cs2/core/signatures.jsonc
@@ -28,8 +28,8 @@
     // Taken from CS2Fixes (https://github.com/Source2ZE/CS2Fixes)
     "CBaseModelEntity::SetModel": {
         "lib": "server",
-        "windows": "40 53 48 83 EC ? 48 8B D9 4C 8B C2 48 8B 0D ? ? ? ? 48 8D 54 24 ? 48 8B 01 FF 50 ? 48 8B 44 24",
-        "linux": "55 48 89 F2 48 89 E5 53 48 89 FB 48 8D 7D ? 48 83 EC ? 48 8D 05 ? ? ? ? 48 8B 30 48 8B 06"
+        "windows": "40 53 48 83 EC ? 48 8B D9 4C 8B C2 48 8B 0D ? ? ? ? 48 8D 54 24 ? 48 8B 01 FF 50 ? 48 8B 44 24 ? 48 8D 54 24 ? 48 8B CB 48 89 44 24 ? E8 ? ? ? ? 48 83 C4 ? 5B C3 CC CC CC CC CC 48 89 5C 24",
+        "linux": "55 48 89 F2 48 89 E5 53 48 89 FB 48 8D 7D ? 48 83 EC ? 48 8D 05 ? ? ? ? 48 8B 30 48 8B 06 FF 50 ? 48 8B 45 ? 48 8D 75 ? 48 89 DF 48 89 45 ? E8 ? ? ? ? 48 8B 5D ? C9 C3 CC CC CC 55"
     },
     // The function has "classname" in it. It can be found when searching for UTIL::CreateEntityByName
     "CBaseEntity::DispatchSpawn": {
@@ -55,13 +55,6 @@
         "lib": "server",
         "windows": "40 53 55 41 56 48 81 EC 90 00 00 00",
         "linux": "55 48 89 E5 41 57 41 56 49 89 FE 41 55 41 54 49 89 F4 53 48 83 EC 78"
-    },
-    // Search for "Unlocked prop_door '%s' at (%.0f %.0f %.0f) has no hardware. All openable doors must have hardware!\n"
-    // above the if in which the string is, the function is called
-    "CBaseModelEntity::SetBodygroup": {
-        "lib": "server",
-        "windows": "48 89 5C 24 08 48 89 74 24 10 57 48 83 EC 20 41 8B F8 48 8B F2 48 8B D9 E8 ? ? ? ?",
-        "linux": "55 48 89 E5 41 55 49 89 F5 41 54 41 89 D4 53 48 89 FB 48 83 EC ? E8 ? ? ? ? 48 85 C0"
     },
     // Search for "break_radius", the constructor is called at the end of the function
     // More simple is to search for the VTable and see when it's being set
